--- a/portfolio.css
+++ b/portfolio.css
@@ -5,7 +5,7 @@ body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('bank.jpg');
     
     background-repeat: no-repeat;
-    background-size: cover; /* Adjust as needed */
+    background-size: cover; 
     background-attachment: fixed;
 
 }
@@ -18,9 +18,9 @@ h1 {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px; /* Add spacing between question boxes */
-    max-width: 85%; /* Adjust the width as needed */
-    width: 900px; /* Adjust the width as needed */
+    margin-bottom: 20px; 
+    max-width: 85%; 
+    width: 900px; 
     margin: 0 auto;
 }
 
